# ohkami-vs-axum

./: bench.sh  postgres.sh
.log/: axum-20250304200337-goal.jsonc  axum-20250305163056.jsonc  axum-20250305174927-goal.jsonc  axum-20250305191003-goal-with-update.jsonc  axum-20250305191730-goal-with-update-2.jsonc  axum-20250305192402-goal-with-update-3.jsonc  axum-20250305193235-goal-with-update-4.jsonc  ohkami-20250304192007.jsonc  ohkami-20250304202931-first.jsonc  ohkami-20250305164150.jsonc  ohkami-20250305165438.jsonc  ohkami-20250305172751-get-connection-pool-directly.jsonc  ohkami-20250305184951-with-tokio_postgres.jsonc  ohkami-20250305190046-with-tokio_postgres-with-update.jsonc  ohkami-20250305195004-using-rand-sample_iter.jsonc  ohkami-20250305202147-tokio-event_interval-31.jsonc  ohkami-20250307161858-howl-with-socket-reuseport-reuseaddr-nodelay-listen4096.jsonc  ohkami-20250307165903-postgres-client-multiplexing.jsonc  ohkami-20250307172551-postgres-pool-next-by-sync-mutex-usize.jsonc  ohkami-20250307180710-postgres-get-client-by-thread-id-hashmap.jsonc  ohkami-20250307185619-postgres-client-by-thread-local-index.jsonc  ohkami-20250307191424-default-socket-config.jsonc  ohkami-20250307192125-default-socket-config-2.jsonc  ohkami-20250307192917-default-socket-config-3.jsonc  ohkami-20250307194134-mimalloc.jsonc  ohkami-20250307195821-postgres-client-by-fixed-size-and-bit-and.jsonc  ohkami-20250307200657-postgres-client-by-fixed-size-and-bit-and-with16.jsonc  ohkami-20250307201723-postgres-client-by-fixed-size-and-bit-and-with16-take2.jsonc  ohkami-20250307203542-postgres-client-without-context.jsonc  ohkami-20250307210311-tokio-event_interval-11.jsonc  ohkami-20250308125708-multiple-single-threads-reuseaddr.jsonc  ohkami-20250308130445-multiple-single-threads-reuseaddr-#2.jsonc
axum/: Cargo.toml  README.md  run.sh
axum/src/common/: mod.rs
ohkami/: Cargo.toml  README.md  run.sh
ohkami/src/: fangs.rs  main.rs  models.rs  postgres.rs
postgres/: init.sql
