[package]
name = "axum-techempower"
version = "0.2.1"
authors = ["Dragos Varovici <dvarovici.work@gmail.com>"]
edition = "2021"

[features]
default = []
simd-json = [
    "dep:simd-json",
    "dep:axum-core",
    "dep:mime",
    "dep:bytes",
    "dep:serde_path_to_error",
]

[dependencies]
axum = { version = "0.7.9", default-features = false, features = [
    "json",
    "query",
    "http1",
    "tokio",
] }
dotenv = "0.15.0"
futures = "0.3.31"
num_cpus = "1.16.0"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = { version = "0.7.12" }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["set-header"] }
yarte = "0.15.7"
simd-json = { version = "0.14.3", optional = true }
axum-core = { version = "0.4.5", optional = true }
mime = { version = "0.3.17", optional = true }
bytes = { version = "1.9.0", optional = true }
serde_path_to_error = { version = "0.1.16", optional = true }
socket2 = "0.5.8"
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
mimalloc = "0.1.43"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
